chore: setup tailwind configurations and tested said configurations

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Mapty - Workout Tracker</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <h1 class="text-4xl uppercase font-regular">Mapty</h1>
+    </main>
+  </body>
 </html>
