--- a/index.html
+++ b/index.html
@@ -9,8 +9,95 @@
     <title>Mapty - Workout Tracker</title>
   </head>
   <body>
-    <main>
-      <h1 class="text-4xl uppercase font-regular">Mapty</h1>
+    <main
+      class="h-[100vh] m-auto grid grid-rows-[1fr_3fr] font-medium text-base text-lighter-gray xl:p-7 xl:grid-cols-6 xl:grid-rows-none"
+    >
+      <section
+        class="flex flex-col gap-[2.5rem] p-3 py-7 bg-dark-1 xl:col-span-2 2xl:px-5"
+      >
+        <header class="h-[5.4rem]">
+          <nav>
+            <a href="/" class="flex justify-center items-center">
+              <img src="./images/logo.png" alt="mapty icon" class="w-[13rem]" />
+            </a>
+          </nav>
+        </header>
+
+        <form
+          action=""
+          class="m-auto grid gap-3 grid-cols-2 gap-3 bg-dark-2 p-5 px-3 rounded-md xl:m-[0] xl:max-w-[41rem] xl:self-center"
+        >
+          <div class="form-control flex gap-2 justify-between items-center">
+            <label for="type">Type</label>
+            <select
+              name="type"
+              id="workout-select"
+              class="pr-2 rounded text-dark-2"
+            >
+              <option value="Hiking">Hiking</option>
+              <option value="Cycling">Cycling</option>
+            </select>
+          </div>
+
+          <div class="form-control flex gap-2 justify-between items-center">
+            <label for="distance">Distance</label>
+            <input
+              id="distance"
+              type="number"
+              name="distance"
+              placeholder="km"
+              class="w-full w-[8rem] pl-1 rounded text-dark-2"
+            />
+          </div>
+
+          <div class="form-control flex gap-2 justify-between items-center">
+            <label for="duration">Duration</label>
+            <input
+              id="duration"
+              type="number"
+              name="duration"
+              placeholder="min"
+              class="w-full w-[8rem] pl-1 rounded text-dark-2"
+            />
+          </div>
+
+          <div class="form-control flex gap-2 justify-between items-center">
+            <label for="elevation">Elevation</label>
+            <input
+              id="elevation"
+              type="number"
+              name="elev gain"
+              placeholder="km"
+              class="w-full w-[8rem] pl-1 rounded text-dark-2"
+            />
+          </div>
+        </form>
+
+        <div
+          class="m-auto grid grid-cols-4 gap-2 bg-dark-2 p-4 border-l-[0.5rem] border-green rounded-md xl:m-[0] xl:max-w-[41rem] xl:self-center"
+        >
+          <h2 class="col-span-full font-medium text-xl">
+            Running on August 17
+          </h2>
+          <span class="col-span-1 text-base uppercase">🚶‍♂️ 10 km</span>
+          <span class="col-span-1 text-base uppercase">⏱ 10 min</span>
+          <span class="col-span-1 text-base uppercase">⚡ 10 km/h</span>
+          <span class="col-span-1 text-base uppercase">🗻 10 spm</span>
+        </div>
+
+        <div
+          class="m-auto grid grid-cols-4 gap-2 bg-dark-2 p-4 border-l-[0.5rem] border-orange rounded-md xl:m-[0] xl:max-w-[41rem] xl:self-center"
+        >
+          <h2 class="col-span-full font-medium text-xl">
+            Cycling on August 17
+          </h2>
+          <span class="col-span-1 text-base uppercase">🚴‍♂️ 10 km</span>
+          <span class="col-span-1 text-base uppercase">⏱ 10 min</span>
+          <span class="col-span-1 text-base uppercase">⚡ 10 km/h</span>
+          <span class="col-span-1 text-base uppercase">👣 10 spm</span>
+        </div>
+      </section>
+      <section class="h-full bg-gray xl:col-span-4"></section>
     </main>
   </body>
 </html>
