style: adjustment for workout list and map layout

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </form>
 
         <ul
-          class="workouts grid justify-center gap-3 max-h-[55rem] overflow-y-auto"
+          class="workouts grid justify-center gap-3 max-h-[30rem] xl:max-h-[55rem] overflow-y-auto"
         >
           <!-- <li
             class="workout workout-running m-auto grid grid-cols-4 gap-2 bg-dark-2 p-4 border-l-[0.5rem] border-green rounded-md xl:m-[0] xl:max-w-[41rem] xl:self-center"
@@ -127,7 +127,7 @@
           </li> -->
         </ul>
       </section>
-      <section class="map h-full bg-gray xl:col-span-4">
+      <section class="map h-[50rem] bg-gray xl:col-span-4">
         <div id="map" class="h-full w-full"></div>
       </section>
     </main>
