--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           </li> -->
         </ul>
       </section>
-      <section class="map h-[50rem] bg-gray xl:col-span-4">
+      <section class="map min-h-[50rem] bg-gray xl:col-span-4">
         <div id="map" class="h-full w-full"></div>
       </section>
     </main>
