--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>
 
           <div class="form-control flex gap-2 justify-between items-center">
-            <label for="elevation">Elevation</label>
+            <label for="elevation-cadence">Elevation</label>
             <input
               id="elevation-cadence"
               type="number"
