feat: made workout tracker app more OOP driven

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <form
           action=""
-          class="form hidden m-auto grid gap-3 grid-cols-2 gap-3 bg-dark-2 p-5 px-3 rounded-md xl:m-[0] transition-all duration-500 xl:max-w-[35rem] xl:self-center"
+          class="form hidden m-auto grid gap-3 grid-cols-2 gap-3 bg-dark-2 p-5 px-3 rounded-md xl:m-[0] xl:max-w-[35rem] xl:self-center"
         >
           <div class="form-control flex gap-2 justify-between items-center">
             <label for="type">Type</label>
